<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_ll"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar_id"
        layout="@layout/top_toolbar"
        />

    <FrameLayout
        android:id="@+id/middle_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_id">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_id"
        app:layout_constraintBottom_toTopOf="@id/submit"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/editrectangle"
            app:endIconDrawable="@drawable/ic_location"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/select_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_edit_profile_img"
                android:drawableTint="@color/textDark"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:textSize="14sp"
                android:paddingRight="10dp"
                android:layout_gravity="center"
                android:paddingLeft="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/editrectangle"
            app:endIconDrawable="@drawable/ic_location"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/phone_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/phone_img"
                android:drawableTint="@color/textDark"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:maxLength="10"
                android:digits="0123456789"
                android:textSize="14sp"
                android:paddingRight="10dp"
                android:layout_gravity="center"
                android:paddingLeft="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>

           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:textSize="14sp"
                android:text="@string/gender_txt"/>


               <RadioGroup
                   android:id="@+id/rg"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <RadioButton
                       android:id="@+id/male_rb"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/male"
                       android:textColor="@color/textDark"/>
                   <RadioButton
                       android:id="@+id/female_rb"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/female"
                       android:textColor="@color/textDark"/>
                   <RadioButton
                       android:id="@+id/other_rb"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/other"
                       android:textColor="@color/textDark"/>

               </RadioGroup>

           </LinearLayout>


<!--        Age LL-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/age"/>

            <EditText
                android:id="@+id/age_edit"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:textSize="14sp"
                android:layout_marginLeft="5dp"
                android:hint=""
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/editrectangle"
                android:inputType="number"
                android:maxLength="3"
                android:digits="0123456789" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="8dp"
                android:text="@string/year"/>


        </LinearLayout>
        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/division"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/editrectangle"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/range"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/editrectangle"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/section"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/editrectangle"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/beat"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/editrectangle"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/submit_txt"
            android:textColor="@color/white" />



    </LinearLayout>
    </ScrollView>



</FrameLayout>

    <LinearLayout
        android:id="@+id/progress_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:clickable="true"
        android:background="@color/tranparent_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-70dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:src="@drawable/iwlms_logo"/>

            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:indeterminate="true"
                android:progressTint="@color/white"
                android:progressDrawable="@color/white"
                android:indeterminateTint="@color/colorPrimary"
                style="@style/AppTheme"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/progress_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/blue"
            android:text="Registering user...please wait !"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>