<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/gradient_bg"
        android:gravity="center"
        android:text="Report Item"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cancel_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_cancel"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/date_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/title"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="Date : "/>

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="01-10-2021"/>

        <View
            android:layout_width="30dp"
            android:layout_height="1dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="Status : "/>

        <TextView
            android:id="@+id/status_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="pending"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/msg_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="left|center"
        android:layout_below="@id/date_ll"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Message : "
            android:textStyle="bold" />

    <TextView
        android:id="@+id/textMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_ll"
        android:layout_marginLeft="5dp"
        android:text="Your Report text Message" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/div_area_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/msg_ll"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division_txt" />

        <TextView
            android:id="@+id/division_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:lines="2"
            android:layout_weight="1"
            android:minWidth="85dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/range_txt" />

        <TextView
            android:id="@+id/range_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="5dp"
            android:lines="2"
            android:minWidth="85dp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/sec_area_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/div_area_ll"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_txt" />

        <TextView
            android:id="@+id/section_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:lines="2"
            android:minWidth="85dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beat_txt" />

        <TextView
            android:id="@+id/beat_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:minWidth="85dp"
            android:lines="2"
            android:layout_weight="1"/>

    </LinearLayout>


    <com.potyvideo.library.AndExoPlayerView
        android:id="@+id/andExoPlayerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/sec_area_ll"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:andexo_play_when_ready="true"
        app:andexo_resize_mode="Fit"
        app:andexo_show_controller="true" />

    <ImageView
        android:id="@+id/report_image"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:visibility="gone"
        android:src="@drawable/ic_menu_gallery"
        android:layout_below="@id/sec_area_ll"/>
<!--    https://github.com/HamidrezaAmz/MagicalExoPlayer-->



</RelativeLayout>